fix second image on mobile

--- a/static/css-custom/custom.css
+++ b/static/css-custom/custom.css
@@ -3,5 +3,9 @@
     background-size: cover;
     background-position: center;
   }
+
+  img{
+    max-width: 100%;
+  }
 }
 
